# SignalAgregator

./: .gitignore
exploration/: pyproject.toml  setup.cfg
exploration/agregator/: constants.py  data_mapping.py  decomposer.py  dto.py  logger.py  matcher.py  naming.py  pipeline.py  processer.py  requirements.txt  source_data.py  source_parser.py
exploration/agregator/_old_version/: aggregator.py  new_generator.py  processer.py  utils.py
exploration/agregator/_old_version/example/: _version.py  base_settings.xlsx  billets.xlsx  concatenate_result.py  data_checker.py  data_preprocessing.py  dens.xlsx  dto.py  features.csv  forbidden.csv  process_data.py  result_1.xlsx  result_2.xlsx  rollings_separator.py  signal_lists.csv  train_pipeline.py  unique_list.csv
exploration/agregator/components/: features_generator.py  filters.py  secondary_functions.py  segments_aggregator.py
exploration/agregator/handlers/: BASE_WITH_POINTS_handler.py  BASE_handler.py  WBF_PIRO_handler.py  WBF_SINGLE_handler.py  factory.py  interfaces.py
exploration/agregator/run/: run.py  settings.xlsx
exploration/agregator/run/materials/: max_data.json  min_data.json  wbf_piro_cutter_settings.json  workcenters.json
exploration/docs/: general.md  preprocessing.md
exploration/docs/models/: general.md  nonmetalic_muzk.md  otk.md
exploration/docs/signals_quality/: limits.md
exploration/models/deep_learning/: constants.py  dataset.py  loss.py  metrics.py  model.py  preprocessing.py  test.py  train.py
exploration/models/nonmetalik_muzk/: ukr64.py
exploration/models/otk/: constants.py  cut_processor.py  ipsrnk_analisys.py  its_processor.py  model_test.py  redone_processor.py  torsion_getter.py  train.py
exploration/models/torsion/: train_base.py
exploration/models/torsion/first_3_m_classification/: train.py
exploration/models/torsion/first_3_m_regression/: train.py
exploration/prototypes/converter/: constants.py  converter_templates.py  dash_templates.py  entrypoint.sh
exploration/prototypes/converter/composites/: calculator.py  converter_api.py
exploration/signals_quality/limmits/: limmits.py
exploration/utils/: metadata.py  model_training.py  utils.py
(+9 files in other folders)
