[metadata]
name = tpqc_exploration
version = 0.0.1
description = Исследования проекта "Система контроля качества сквозных технологических процессов ЕВРАЗ ЗСМК (TPQC)"
author = DS команда проекта 9684

[options]
packages = find:
package_dir = = models
python_requires = ~=3.10.0

install_requires =
    evraz-ds==1.6.18
    pandas==1.4.4
    feature-engine==1.6.2
    imbalanced-learn==0.11.0
    py7zr>=0.15.9


[options.extras_require]
dev =
    Flake8-pyproject==1.1.0
    flake8==5.0.4
    isort==5.10.1
    pylint==2.15.10
    pytest-cov==4.0.0
    python-dateutil==2.8.2
    pytest==7.1.3
    toml==0.10.2
    yapf==0.32.0
